--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -36,7 +36,7 @@
       </md-card-header>
       <md-card-content>
         <md-list fxFlex="100">
-          <md-list-item *ngFor="let comment of comments">
+          <md-list-item *ngFor="let comment of dish.comments">
             <div mdLine>
                 <span>{{comment.comment}}</span><br />
                 <span>{{comment.rating}} stars</span><br />
