--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -22,7 +22,7 @@
     <!-- grid layout -->
   <div fxFlex>
     <md-grid-list cols="2" rowHeight="200px">
-      <md-grid-tile *ngFor="let dish of dishes">
+      <md-grid-tile *ngFor="let dish of dishes" (click)="onSelect(dish)">
         <img height="200px" src={{dish.image}} alt={{dish.name}} />
         <md-grid-tile-footer>
           <h1 md-line>{{dish.name | uppercase}}</h1>
@@ -53,7 +53,7 @@
     </md-card>
   </div>-->
 
-  <app-dishdetail>
+  <app-dishdetail [dish] = "selectedDish">
   </app-dishdetail>
 
 </div>
