--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -35,4 +35,59 @@
           </div>
         </div>
       </div>
+
+      <div fxFlex fxFlexOffset="20px" class="form-size">
+        <h3>Send us your feedback</h3>
+        <p>
+          {{feedbackForm.value | json}} {{feedbackForm.status | json}}
+        </p>
+        <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
+          <p>
+            <md-input-container class="half-width"
+              dividerColor="{{(feedbackForm.get('firstname').hasError('required') && feedbackForm.get('firstname').touched) ? 'warn' : 'primary'}}">
+              <input mdInput formControlName="firstname" placeholder="First Name" type="text" required>
+              <md-hint>
+                <span [hidden]="!(feedbackForm.get('firstname').hasError('required') && feedbackForm.get('firstname').touched)">
+                  First Name is required
+                </span>
+              </md-hint>
+            </md-input-container>
+            <md-input-container class="half-width">
+              <input mdInput formControlName="lastname" placeholder="Last Name" type="text">
+            </md-input-container>
+            <md-input-container class="half-width">
+              <input mdInput formControlName="telnum" placeholder="Tel. Number" type="tel">
+            </md-input-container>
+            <md-input-container class="half-width">
+              <input mdInput formControlName="email" placeholder="Email" type="email">
+            </md-input-container>
+          </p>
+          <table class="form-size">
+            <td>
+              <md-slide-toggle formControlName="agree">May we contact you?</md-slide-toggle>
+            </td>
+            <td>
+              <md-select placeholder="How?" formControlName="contacttype">
+                <md-option *ngFor="let ctype of contactType" [value]="ctype">
+                  {{ctype}}
+                </md-option>
+              </md-select>
+            </td>
+          </table>
+          <p>
+            <md-input-container class="full-width"
+              dividerColor="{{(feedbackForm.get('message').hasError('required') && feedbackForm.get('message').touched) ? 'warn' : 'primary'}}">
+              <textarea mdInput formControlName="message" placeholder="Your feedback" rows=12 required></textarea>
+              <md-hint>
+                <span [hidden]="!(feedbackForm.get('message').hasError('required') && feedbackForm.get('message').touched)">
+                  Your Feedback is required
+                </span>
+              </md-hint>
+            </md-input-container>
+          </p>
+          <button type="submit" md-button class="background-primary text-floral-white"
+            [disabled]="feedbackForm.invalid">Submit</button>
+        </form>
+      </div>
+
 </div>
