--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -44,22 +44,40 @@
         <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
           <p>
             <md-input-container class="half-width"
-              dividerColor="{{(feedbackForm.get('firstname').hasError('required') && feedbackForm.get('firstname').touched) ? 'warn' : 'primary'}}">
+              dividerColor="{{formErrors.firstname ? 'warn' : 'primary'}}">
               <input mdInput formControlName="firstname" placeholder="First Name" type="text" required>
               <md-hint>
-                <span [hidden]="!(feedbackForm.get('firstname').hasError('required') && feedbackForm.get('firstname').touched)">
-                  First Name is required
+                <span [hidden]="!(formErrors.firstname)">
+                  {{formErrors.firstname}}
                 </span>
               </md-hint>
             </md-input-container>
-            <md-input-container class="half-width">
+            <md-input-container class="half-width"
+              dividerColor="{{formErrors.lastname ? 'warn' : 'primary'}}">
               <input mdInput formControlName="lastname" placeholder="Last Name" type="text">
+              <md-hint>
+                <span [hidden]="!(formErrors.lastname)">
+                  {{formErrors.lastname}}
+                </span>
+              </md-hint>
             </md-input-container>
-            <md-input-container class="half-width">
-              <input mdInput formControlName="telnum" placeholder="Tel. Number" type="tel">
+            <md-input-container class="half-width"
+              dividerColor="{{formErrors.telnum ? 'warn' : 'primary'}}">
+              <input mdInput formControlName="telnum" placeholder="Tel. Number" type="tel" pattern="[0-9]*">
+              <md-hint>
+                <span [hidden]=!(formErrors.telnum)>
+                  {{formErrors.telnum}}
+                </span>
+              </md-hint>
             </md-input-container>
-            <md-input-container class="half-width">
-              <input mdInput formControlName="email" placeholder="Email" type="email">
+            <md-input-container class="half-width"
+              dividerColor="{{formErrors.email ? 'warn' : 'primary'}}">
+              <input mdInput formControlName="email" placeholder="Email" type="email" email>
+              <md-hint>
+                <span [hidden]=!(formErrors.email)>
+                  {{formErrors.email}}
+                </span>
+              </md-hint>
             </md-input-container>
           </p>
           <table class="form-size">
