--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -6,9 +6,9 @@
     fxLayoutGap="10px"
     fxLayoutGap.xs="0">
 
-  <div fxFlex="40">
+  <div fxFlex="40" *ngIf="dish">
     <!-- display selected item in a card -->
-    <md-card *ngIf="dish">
+    <md-card>
       <md-card-header>
         <md-card-title>
           <h3>{{dish.name | uppercase}}</h3>
@@ -21,15 +21,22 @@
         </p>
       </md-card-content>
       <md-card-actions>
+        <button md-button [routerLink]="['/dishdetail', prev]">
+          <span class="fa fa-chevron-left fa-lg"></span>
+        </button>
         <button md-button>LIKE</button>
         <button md-button>SHARE</button>
         <button md-button (click)="goBack()">BACK</button>
+        <span class="flex-spacer"></span>
+        <button md-button [routerLink]="['/dishdetail', next]">
+          <span class="fa fa-chevron-right fa-lg"></span>
+        </button>
       </md-card-actions>
     </md-card>
   </div>
 
-  <div fxFlex="40">
-    <md-card *ngIf="dish">
+  <div fxFlex="40" *ngIf="dish">
+    <md-card>
       <md-card-header>
         <md-card-title>
           <h3><strong>Comments</strong></h3>
