reactive forms - comments form

--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -43,17 +43,62 @@
         </md-card-title>
       </md-card-header>
       <md-card-content>
-        <md-list fxFlex="100">
+        <md-list>
           <md-list-item *ngFor="let comment of dish.comments">
             <div mdLine>
                 <span>{{comment.comment}}</span><br />
                 <span>{{comment.rating}} stars</span><br />
                 <span>-- {{comment.author}} {{comment.date | date}}</span><br />
             </div>
-
           </md-list-item>
         </md-list>
+
+        <!-- <p>
+          {{commentForm.value | json}} {{commentForm.status | json}}
+        </p> -->
+
+        <div>
+          <md-list>
+            <md-list-item *ngIf="commentForm.valid">
+               <div mdLine>
+                  <span>{{commentForm.value.comment}}</span><br />
+                  <span>{{commentForm.value.rating}} stars</span><br />
+                  <span>-- {{commentForm.value.author}}</span><br />
+              </div>
+            </md-list-item>
+          </md-list>
+          <form novalidate [formGroup]="commentForm" (ngSubmit)="onSubmit()">
+            <p>
+              <md-input-container class="half-width"
+                dividerColor="{{formErrors.author ? 'warn' : 'primary'}}">
+                <input mdInput formControlName="author" placeholder="Name" type="text">
+                <md-hint>
+                  <span [hidden]="!(formErrors.author)">
+                    {{formErrors.author}}
+                  </span>
+                </md-hint>
+              </md-input-container>
+              <br />
+              <md-slider class="half-width" min="1" max="5" step="1" value="5"
+                thumbLabel tickInterval="1" formControlName="rating" placeholder="Rating">
+              </md-slider>
+              <md-input-container class="full-width"
+                dividerColor="{{formErrors.comment ? 'warn' : 'primary'}}">
+                <textarea mdInput formControlName="comment" placeholder="Your Comment" rows=5 required></textarea>
+                <md-hint>
+                  <span [hidden]="!(formErrors.comment)">
+                    {{formErrors.comment}}
+                  </span>
+                </md-hint>
+              </md-input-container>
+            </p>
+            <button type="submit" md-button class="background-primary text-floral-white"
+              [disabled]="commentForm.invalid">Submit</button>
+          </form>
+        </div>
+
       </md-card-content>
+
     </md-card>
   </div>
 
