--- a/src/app/dishdetail/dishdetail.component.scss
+++ b/src/app/dishdetail/dishdetail.component.scss
@@ -1,3 +1,15 @@
 md-list-item {
   margin-bottom: 50px;
 }
+
+.full-width {
+  width: 95%
+}
+
+.half-width {
+  width: 45%
+}
+
+.form-size {
+  width: 75%
+}
